Thu Mar 26 18:38:54 MET 1998 Sven Neumann <sven@gimp.org>

	app/gradient.c: fixed another --no-data problem; also the 
	editor now behaves better when it is resized  

Wed Mar 25 22:46:36 MST 1998 Nathan Summers <rock@gimp.org>

	* iscissors.c: fixed a problem with unintialized variables

Wed Mar 25 19:29:09 PST 1998 Manish Singh <yosh@gimp.org>

	* app/gimprc.c: support for parsing env vars in gimprc

Wed Mar 25 18:06:39 PST 1998 Manish Singh <yosh@gimp.org>

	* applied gimp-quinet-980122-0 and tweaked the tests a bit,
	this makes the optional library tests in configure.

	* applied gimp-jbuhler-980321-0, fixes more warnings in plug-ins

1998-03-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* app/asupsample.c (adaptive_supersample_area): Removed Sopwith's
	"speed optimizations", as they introduced bugs (exposed by using a
	high threshold value for supersampling).  They weren't much of a
	speed improvement, anyway (memcpy on very small regions, etc.).
	Also, assuming that all-bytes-zero is a floating-point 0 value is
	not portable.

Wed Mar 25 16:22:00 EST 1998 Matthew Wilson <msw@gimp.org>

	* app/app_procs.c: now prints messages when starting up --no-splash
	
	* app/gimprc.c: now prints messages when starting up --no-splash

	* app/plug-in.c: does not print messages when starting up with
	splash screen
	
Tue Mar 24 20:32:53 PST 1998 Manish Singh <yosh@gimp.org>

	* app/fileops.c: refresh the open/save as dialogs upon open

	* applied gimp-quinet-980323-0, fixing more M_PI madness

	* applied gimp-quinet-980323-1 which fixes redundant inline
	checks

	* plug-ins/gfig/gfig.c: changed stipple to type unsigned char to
	quell warnings

Tue Mar 24 18:03:37 PST 1998 Manish Singh <yosh@gimp.org>

	* configure.in: corrected test for libXmu for some systems; added
	test for difftime

	* app/main.c: use glib ATEXIT macro

	* app/text_tool.c: applied gimp-stric-980321-0 (text preview
	refresh)

	* plug-ins/script-fu/script-fu-console.c: don't need to init